category ve genre duzenlemeleri yapildi`

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     tvmanagement.model:
             class:        BiberLtd\Bundle\TvManagementBundle\Services\TvManagementModel
-            arguments:    [@kernel, "default", "doctrine"]
+            arguments:    ["@kernel", "default", "doctrine"]
